--- a/src/App.css
+++ b/src/App.css
@@ -1,39 +1,37 @@
-.App {
-  text-align: center;
+body {
+    box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.main-content {
+    padding: 10px 0 9px 10px;
+    background-color:rgb(231, 227, 227);
+}
+.box-container {
+    min-height: 100vh;
+    height: 100vh;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: black;
+}
+.box-container .box {
+    width: 70%;
+    height: auto;
+    padding: 10px 20px;
+    border-radius: 7px;
+    border: none;
+    background-color: white;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-float infinite 3s ease-in-out;
-  }
+.box-container .box .form {
+    display: flex;
+    align-items: center;
 }
-
-.App-header {
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.sidebar .nav-link:hover h5 {
+    background-color: rgb(165, 162, 162);
+    color: black;
 }
-
-.App-link {
-  color: rgb(112, 76, 182);
-}
-
-@keyframes App-logo-float {
-  0% {
-    transform: translateY(0);
-  }
-  50% {
-    transform: translateY(10px);
-  }
-  100% {
-    transform: translateY(0px);
-  }
+.sidebar .nav-link h5 {
+    cursor: pointer;
 }
